--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 <textarea rows="4" cols="50">
-whats on your mind?
+whats on your pretty little mind?
 </textarea>
 
 <button type="button">post</button>
