new favorite color: #FADDAD

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>geez</title>
 </head>
-<body style="background-color: lightgreen">
+<body style="background-color: #FADDAD">
 
 <p>hi wow cool</p>
 
