--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body style="background-color: #FADDAD">
 
-<h1>kkkaaaaaattttthhhhhhh</h1>
+<h1>kath</h1>
 
-<p> look at the comments in the code</p>
+<p> look at the comments</p>
 
 <!-- we can take text entered form this somehow... -->
 
