--- a/gvmcg/index.html
+++ b/gvmcg/index.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html>
+<head>
+	<title>geez</title>
+</head>
+<body style="background-color: #FADDAD">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    woah
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<h1>kath</h1>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<p> look at the comments</p>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<!-- we can take text entered form this somehow... -->
+
+<textarea rows="4" cols="50">
+whats on your pretty little mind?
+</textarea>
+
+
+<button type="button">post</button>
+
+<!--using this -->
+
+<script type="text/javascript">
+	document.getElementsByTagName('postbutton')
+</script>
+
+
+<!-- I looked up some code that might let us intereact with the html -->
+
+
+<!-- when this button is clicked, it runs the code after the "on click="-->
+<button onclick="getElementById('demo').innerHTML = Date()">What is the time?</button>
+
+
+<!-- when this TEXT is clicked, 
+	it runs "myfunction()" which references the script below it-->
+
+<p id="demo" onclick="myFunction()">Click me to change my text color.</p>
+
+
+<script>
+	// this is javascript
+	// it uses different syntax
+	// i like java script
+
+	//java is for big CS degree CODE
+	//javascript is for smaller anyone can do it code
+	// they are similar
+
+function myFunction() {
+  document.getElementById("demo").style.color = "red";
+}
+
+</script>
+
+
+</body>
 </html>
